PPA sourcecode/project/PPA/src/main/resources/static/css/style.css
/* ... */
.textbox.combo>.textbox-addon>.combo-arrow
{
	background-color: transparent;
}
.combo-p.panel-htop
{
	margin-top: 6px;
	padding: 15px 0;
	background-color: #FFFFFF;
	border: solid 1px #555555;
	border-radius: 15px;
}
.combo-panel
{
	border: none;
}
.combobox-item
{
	height: 35px;
	line-height: 35px;
	padding: 0 20px;
	font-size: 16px;
	white-space: nowrap;
	overflow-x: hidden;
	text-overflow: ellipsis;
}
.combobox-item.combobox-item-selected
{
	background-color: inherit;
	color: #157C79;
}
.combobox-item:hover
{
	background-color: #004745;
	color: white;
}
.account-textbox.textbox
{
	border-radius: 25px;
}

/* checkbox */

.checkbox
{
	border: solid 1px #707070;
	border-radius: 2px;
}
.checkbox>.checkbox-inner
{
	font-size: initial;
	line-height: initial;
}
.checkbox>.checkbox-inner.checkbox-checked
{
	background-color: #FFFFFF;
}
.checkbox>.checkbox-inner.checkbox-checked>svg>path
{
	stroke-width: 4px;
	stroke: #157C79;
}

/* radiobutton */

.radiobutton
{
	border: solid 1px #707070;
}
.radiobutton-inner
{
	background-color: #157C79;
}

/* menu */

.menu-line
{
	border: none;
}

/* button */

.l-btn
{
	border: none;
}
.l-btn-plain:hover,
.m-btn-plain-active
{
	border-color: transparent;
	background-color: initial;
}

/* datagrid */

.datagrid-htable, .datagrid-btable, .datagrid-ftable
{
	color: #555555;
}
.datagrid-header-row,
.datagrid-row
{
    height: 50px;
}
.datagrid-header-row>td,
.datagrid-row>td
{
	border-right-color: transparent;
	border-bottom-color: transparent;
}
.datagrid-header
{
	font-weight: bold;
	background: none;
	border-bottom: none;
}
.datagrid-header td.datagrid-header-over
{
	background-color: initial;
}
.datagrid-header-row>td
{
	border-bottom-style: solid;
	border-bottom-color: #707070;
}
.datagrid-header-row:nth-last-child(2)>td:not([rowspan])
{
	border-bottom-color: #EDEDED;
}
.datagrid-group
{
	border-bottom-color: #EDEDED;
}
.datagrid-cell
{
	padding: 0 12px;
}
.datagrid-cell-group,
.datagrid-header .datagrid-cell span,
.datagrid-cell
{
	line-height: 20px;
	font-size: 16px;
}
.datagrid-cell-group
{
	color: #157C79;
}
.datagrid-row-selected td
{
	color: #157C79;
}
.datagrid-row-over td
{
	background-color: #004745;
	color: white;
}
.datagrid-toolbar
{
	background-color: transparent;
}
.datagrid-row td .datagid-checkmark
{
	width: 100%;
	height: 16px;
	background-position: center center;
	background-repeat: no-repeat;
	background-image: url(/images/checkmark-16.png);
}
.datagrid-row-over td .datagid-checkmark
{
	background-image: url(/images/checkmark-16-white.png);
}

/* big buttons */

.navigation-button.l-btn
{
	box-sizing: border-box;
	height: 50px;
	border-style: solid;
	border-width: 2px;
	border-radius: 30px;
	vertical-align: middle;
	text-align: center;
}
.navigation-button.l-btn>.l-btn-left
{
	max-width: 100%;
}
.navigation-button.l-btn>.l-btn-left>.l-btn-text
{
	margin: 0;
	vertical-align: middle;
	text-align: center;
	line-height: 46px;
	font-size: 16px;
	font-weight: bold;
}

.navigation-button.navigation-button-wizard.l-btn
{
	width: 200px;
	background-color: #FFFFFF;
	border-color: #004745;
}
.navigation-button.navigation-button-wizard.l-btn.l-btn-disabled
{
	border-color: #555555;
}
.navigation-button.navigation-button-wizard.l-btn>.l-btn-left>.l-btn-text
{
	color: #004745;
	margin: 0 20px;
}
.navigation-button.navigation-button-wizard.l-btn.l-btn-disabled>.l-btn-left>.l-btn-text
{
	color: #707070;
}

.navigation-button.navigation-button-home.l-btn
{
	padding: 0 15px;
	/*min-width: 200px;*/
	background-image: none;
	border-color: #FFFFFF;
}
.navigation-button.navigation-button-home.l-btn:hover
{
	background: darkgray;
}
.navigation-button.navigation-button-home.l-btn>.l-btn-left>.l-btn-text
{
	color: #FFFFFF;
}

/* SelectPPA toolbar buttons (smaller wizard-style pills) */

#SelectPPA-ppas-addButton.l-btn,
#SelectPPA-ppas-importButton.l-btn
{
	box-sizing: border-box;
	height: 36px;
	border-style: solid;
	border-width: 2px;
	border-radius: 24px;
	vertical-align: middle;
	text-align: center;
	background-color: #FFFFFF;
	border-color: #004745;
	padding: 0 12px;
	margin-right: 10px;
}

#SelectOutputTypeAndGo1-generateOutputButton.l-btn
{
	box-sizing: border-box;
	height: 36px;
	border-style: solid;
	border-width: 2px;
	border-radius: 24px;
	vertical-align: middle;
	text-align: center;
	background-color: #FFFFFF;
	border-color: #004745;
	padding: 0 12px;
	margin-right: 10px;
}

#SelectPPA-ppas-addButton.l-btn>.l-btn-left,
#SelectPPA-ppas-importButton.l-btn>.l-btn-left
{
	max-width: 100%;
}

#SelectOutputTypeAndGo1-generateOutputButton.l-btn>.l-btn-left
{
	max-width: 100%;
}

#SelectPPA-ppas-addButton.l-btn>.l-btn-left>.l-btn-text,
#SelectPPA-ppas-importButton.l-btn>.l-btn-left>.l-btn-text
{
	vertical-align: middle;
	text-align: center;
	line-height: 32px;
	font-size: 16px;
	font-weight: bold;
	color: #004745;
}

#SelectOutputTypeAndGo1-generateOutputButton.l-btn>.l-btn-left>.l-btn-text
{
	vertical-align: middle;
	text-align: center;
	line-height: 32px;
	font-size: 16px;
	font-weight: bold;
	color: #004745;
}

/* SelectPpaMetrics1 toolbar filter button (wizard-style pill) */

#SelectPpaMetrics1-filterButton.l-btn
{
	box-sizing: border-box;
	height: 36px;
	border-style: solid;
	border-width: 2px;
	border-radius: 24px;
	vertical-align: middle;
	text-align: center;
	background-color: #FFFFFF;
	border-color: #004745;
	padding: 0 12px;
	margin-right: 10px;
}

#SelectPpaMetrics1-filterButton.l-btn>.l-btn-left
{
	max-width: 100%;
}

#SelectPpaMetrics1-filterButton.l-btn>.l-btn-left>.l-btn-text
{
	vertical-align: middle;
	text-align: center;
	line-height: 32px;
	font-size: 16px;
	font-weight: bold;
	color: #004745;
}

#SelectPpaMetrics1-filterButton.l-btn>.l-btn-left>.l-btn-icon
{
	vertical-align: middle;
	margin-top: -1px;
}

#SelectPpaMetrics1-filterButton.filter-active.l-btn
{
	background-color: #004745;
	border-color: #004745;
}

#SelectPpaMetrics1-filterButton.filter-active.l-btn>.l-btn-left>.l-btn-text
{
	color: #FFFFFF;
}
/* ... */

